--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -3,7 +3,50 @@
 {% block contents %}
 
 <div class="articles-wrap">
-  <article class="article bg">
+
+  <section class="article">
+    <nav class="article-list">
+      <h2 class="article-list__title">tsux.me ブログ</h2>
+      <span
+        class="article-list__article-number">{{ page_obj.start_index }}{% if page_obj.start_index != page_obj.end_index %}
+        〜 {{ page_obj.end_index }}{% endif %}件 / {{ page_obj.paginator.count }}件中</span>
+      {% for item in object_list %}
+      <article>
+        <a class="article-list__item" href="{% url 'article' item.slug %}">
+          {% if item.thumbnail %}
+          <img class="article-list__thumb" src="{{ item.thumbnail.url }}" alt="{{ item.title }}">
+          {% endif %}
+          <div>
+            <h6 class="article-list__item-title">{{ item.title }}</h6>
+            <p>
+              投稿日 {{ item.create_date }}
+              {% if item.create_date != item.update_date %}
+              / 更新日 {{ item.update_date }}
+              {% endif %}
+            </p>
+          </div>
+        </a>
+      </article>
+      {% endfor %}
+      <ul class="list__page-nav">
+        {% if page_obj.has_previous %}
+        <a href="?page={{ page_obj.previous_page_number }}">前へ</a>
+        {% endif %}
+        {% for num in page_obj.paginator.page_range %}
+        {% if page_obj.number == num %}
+        <li><span class="list__page-nav-item">{{ num }}</span></li>
+        {% else %}
+        <li><a class="list__page-nav-item" href="?page={{ num }}">{{ num }}</a></li>
+        {% endif %}
+        {% endfor %}
+        {% if page_obj.has_next %}
+        <a href="?page={{ page_obj.next_page_number }}">次へ</a>
+        {% endif %}
+      </ul>
+    </nav>
+  </section>
+
+  <section class="article bg">
     <ul class="top-page" id="js-top-page">
       <li class="top-page__item top-page__item--selected js-top-page__item">
         <div class="top-page__contents">
@@ -94,45 +137,6 @@
       <li class="index__item js-index__item">ABOUT</li>
       <li class="index__item js-index__item">SNS</li>
     </ul>
-  </article>
-  <section class="article">
-    <nav class="article-list">
-    <h2 class="article-list__title">最近の記事</h2>
-    <span class="article-list__article-number">{{ page_obj.start_index }}{% if page_obj.start_index != page_obj.end_index %} 〜 {{ page_obj.end_index }}{% endif %}件 / {{ page_obj.paginator.count }}件中</span>
-    {% for item in object_list %}
-    <article>
-      <a class="article-list__item" href="{% url 'article' item.slug %}">
-        {% if item.thumbnail %}
-        <img class="article-list__thumb" src="{{ item.thumbnail.url }}" alt="{{ item.title }}">
-        {% endif %}
-        <div>
-        <h6 class="article-list__item-title">{{ item.title }}</h6>
-        <p>
-          投稿日 {{ item.create_date }}
-          {% if item.create_date != item.update_date %}
-          / 更新日 {{ item.update_date }}
-          {% endif %}
-        </p>
-        </div>
-      </a>
-    </article>
-    {% endfor %}
-    <ul class="list__page-nav">
-      {% if page_obj.has_previous %}
-      <a href="?page={{ page_obj.previous_page_number }}">前へ</a>
-      {% endif %}
-      {% for num in page_obj.paginator.page_range %}
-      {% if page_obj.number == num %}
-      <li><span class="list__page-nav-item">{{ num }}</span></li>
-      {% else %}
-      <li><a class="list__page-nav-item" href="?page={{ num }}">{{ num }}</a></li>
-      {% endif %}
-      {% endfor %}
-      {% if page_obj.has_next %}
-      <a href="?page={{ page_obj.next_page_number }}">次へ</a>
-      {% endif %}
-    </ul>
-    </nav>
   </section>
 </div>
 
