--- a/templates/blog/frontparts/nav.html
+++ b/templates/blog/frontparts/nav.html
@@ -40,7 +40,7 @@
       {% endfor %}
       </ul>
   </div>
-  <div class="">
+  <div class="advertisement">
     {{ advertisement.0.0.code | safe }}
   </div>
   <div class="nav__item">
