--- a/assets/css/frontparts/header.css
+++ b/assets/css/frontparts/header.css
@@ -1,6 +1,9 @@
 
 .header {
   background: #333;
+  display: flex;
+  align-items: center;
+  font-family: "M Plus 1p";
   height: 50px;
   padding: 0 10px;
   position: fixed;
@@ -28,6 +31,8 @@
 
 .header__title {
   color: #fff;
+  display: flex;
+  align-items: baseline;
   font-size: 32px;
   line-height: 50px;
   margin: 0 10px;
@@ -41,10 +46,15 @@
 
   .header__subtitle {
     font-size: 10px;
+    margin: 0;
   }
 
   .header__title {
-    font-size: 22px;
+    font-size: 18px;
+    height: 50px;
+    line-height: 1;
+    flex-flow: column;
+    justify-content: center;
   }
 
 }
