--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,6 +12,15 @@
 
 html {
   background: url(../img/bg.jpg);
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+}
+
+body {
+  height: 100%;
+  width: 100%;
+  overflow: scroll;
 }
 
 .main {
@@ -20,7 +29,7 @@ html {
   justify-content: center;
   min-height: calc(100vh - 49px);
   padding: 70px 0 15px;
-  width: 100%;
+  width: 100vw;
 }
 
 .index {
