--- a/assets/css/article-list.css
+++ b/assets/css/article-list.css
@@ -42,7 +42,7 @@
 .list__page-nav {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: center;
   padding: 40px 20px 20px;
   width: 100%;
   text-align: center;
